--- a/m/v/index.html
+++ b/m/v/index.html
@@ -27,13 +27,13 @@
         <h1><img src="../r/images/y.jpg" class="radius-circle rotate-hover" height="50" alt=""/>管理中心</h1>
     </div>
     <div class="head-l">
-        <a href="" id="first-page" class="button button-little bg-green" target="_blank">
+        <!--<a href="" id="first-page" class="button button-little bg-green" target="_blank">-->
             <span class="icon-home"></span>首页</a> &nbsp;&nbsp;
         <a href="#" id="clear-cache" class="button button-little bg-blue">
             <span class="icon-wrench"></span>清除缓存</a> &nbsp;&nbsp;
         <a id="chngPwd" href="#" class="button button-little bg-blue" onclick="showChangePwd(this);">
             <span class="icon-wrench"></span>更改密码</a> &nbsp;&nbsp;
-        <a id="re-login" class="button button-little bg-blue"  href="login.html">
+        <a id="re-login" class="button button-little bg-blue" href="login.html">
             <span class="icon-legal"></span>重新登录</a>
         <a id="exit-login" class="button button-little bg-red" href="login.html">
             <span class="icon-power-off"></span>退出系统</a>
@@ -57,31 +57,30 @@
 </ul>
 
 
-
 <div class="admin">
     <iframe scrolling="auto" rameborder="0" src="main.html" name="right" width="100%" height="99%" id="iframe"></iframe>
 </div>
 <!-- 修改密码 -->
 <div id="passwordLayer" style="display: none;">
     <form class="form-horizontal" style="margin: 0 15px">
-            <div class="form-group" style="margin-top: 15px;">
-                <div class="col-sm-2 control-label">旧密码</div>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control"  placeholder="旧密码" id="oldPwd"/>
-                </div>
+        <div class="form-group" style="margin-top: 15px;">
+            <div class="col-sm-2 control-label">旧密码</div>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" placeholder="旧密码" id="oldPwd"/>
             </div>
-            <div class="form-group">
-                <div class="col-sm-2 control-label">新密码</div>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control"  placeholder="新密码" id="pwd"/>
-                </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-2 control-label">新密码</div>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" placeholder="新密码" id="pwd"/>
             </div>
-            <div class="form-group">
-                <div class="col-sm-2 control-label">确认密码</div>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" placeholder="确认密码" id="newPwd"/>
-                </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-2 control-label">确认密码</div>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" placeholder="确认密码" id="newPwd"/>
             </div>
+        </div>
     </form>
 </div>
 
