--- a/m/v/login.html
+++ b/m/v/login.html
@@ -48,7 +48,7 @@
                             <div class="field field-icon-right" id="inputPicCode">
                                 <row>
                                     <input type="text" class="col-md-6 input input-big" name="password"
-                                           id=inputPicCode" placeholder="图形验证码"/>
+                                           id="inputPicCode" placeholder="图形验证码"/>
                                     <img id=imgCode height="50" width="200" class="col-md-6"
                                          src='http:/rest/context/getPicCode'
                                          alt=""/>
