--- a/m/v/modules/systemDictionary/metadataDictionary/manager.html
+++ b/m/v/modules/systemDictionary/metadataDictionary/manager.html
@@ -488,7 +488,7 @@
                                 </div>
                             </div>
                             <div class="form-group col-sm-6">
-                                <label for="metadataSortFields" class="col-sm-3 control-label">表格排序字段</label>
+                                <label for="metadataSortFields" class="col-sm-3 control-label">排序字段</label>
                                 <div class="col-sm-9">
                                     <input type="text" class="form-control" id="metadataSortFields"
                                            placeholder="输入表格排序字段" name="metadataSortFields"
