--- a/m/index.html
+++ b/m/index.html
@@ -6,25 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="renderer" content="webkit">
     <title>有托邦管理中心</title>
-    <link rel="stylesheet" href="../r/css/pintuer.css">
-    <link rel="stylesheet" href="../r/css/admin.css">
-    <link rel="stylesheet" type="text/css" href="../r/plugins/simpleTree/SimpleTree.css"/>
-    <script src="../r/lib/jquery.min.js"></script>
-    <script src="../r/lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../r/lib/bootstrap/js/modalDialog.js"></script>
-    <script type="text/javascript" src="../r/plugins/simpleTree/SimpleTree.js"></script>
-    <script src="../r/lib/layer/layer.js"></script>
-    <script src="../r/lib/md5.min.js"></script>
-    <script src="../r/js/common.js"></script>
-    <script src="../r/js/public.js" type="text/javascript"></script>
-    <script src="../r/js/index.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="../r/lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="r/css/pintuer.css">
+    <link rel="stylesheet" href="r/css/admin.css">
+    <link rel="stylesheet" type="text/css" href="r/plugins/simpleTree/SimpleTree.css"/>
+    <script src="r/lib/jquery.min.js"></script>
+    <script src="r/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="r/lib/bootstrap/js/modalDialog.js"></script>
+    <script type="text/javascript" src="r/plugins/simpleTree/SimpleTree.js"></script>
+    <script src="r/lib/layer/layer.js"></script>
+    <script src="r/lib/md5.min.js"></script>
+    <script src="r/js/common.js"></script>
+    <script src="r/js/public.js" type="text/javascript"></script>
+    <script src="r/js/index.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="r/lib/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body onload="firstShow()" style="background-color:#f2f9fd;">
 <div class="header bg-main">
     <div class="logo margin-big-left fadein-top">
-        <h1><img src="../r/images/y.jpg" class="radius-circle rotate-hover" height="50" alt=""/>管理中心</h1>
+        <h1><img src="r/images/y.jpg" class="radius-circle rotate-hover" height="50" alt=""/>管理中心</h1>
     </div>
     <div class="head-l">
         <!--<a href="" id="first-page" class="button button-little bg-green" target="_blank">-->
