--- a/m/login.html
+++ b/m/login.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="renderer" content="webkit">
     <title>登录</title>
-    <link rel="stylesheet" href="../r/css/pintuer.css">
-    <link rel="stylesheet" type="text/css" href="../r/lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../r/css/admin.css">
-    <script src="../r/lib/jquery.min.js"></script>
-    <script src="../r/lib/layer/layer.js"></script>
-    <script src="../r/js/pintuer.js"></script>
-    <script src="../r/lib/vue.min.js"></script>
+    <link rel="stylesheet" href="r/css/pintuer.css">
+    <link rel="stylesheet" type="text/css" href="r/lib/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="r/css/admin.css">
+    <script src="r/lib/jquery.min.js"></script>
+    <script src="r/lib/layer/layer.js"></script>
+    <script src="r/js/pintuer.js"></script>
+    <script src="r/lib/vue.min.js"></script>
 
 </head>
 <body>
@@ -101,8 +101,8 @@
         </div>
     </div>
 </div>
-<script src="../r/js/common.js"></script>
-<script src="../r/js/login.js"></script>
+<script src="r/js/common.js"></script>
+<script src="r/js/login.js"></script>
 </body>
 
 
