--- a/m/ueditor-test.html
+++ b/m/ueditor-test.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="../r/lib/ueditor/ueditor.config.js"></script>
-    <script src="../r/lib/ueditor/ueditor.all.js"></script>
+    <script src="r/lib/ueditor/ueditor.config.js"></script>
+    <script src="r/lib/ueditor/ueditor.all.js"></script>
 </head>
 <body>
 
