--- a/m/index.html
+++ b/m/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="renderer" content="webkit">
-    <title>有托邦管理中心</title>
+    <title>管理中心</title>
     <link rel="stylesheet" href="r/css/pintuer.css">
     <link rel="stylesheet" href="r/css/admin.css">
     <link rel="stylesheet" type="text/css" href="r/plugins/simpleTree/SimpleTree.css"/>
