--- a/m/index.html
+++ b/m/index.html
@@ -24,11 +24,11 @@
 <body onload="firstShow()" style="background-color:#f2f9fd;">
 <div class="header bg-main">
     <div class="logo margin-big-left fadein-top">
-        <h1><img src="r/images/y.jpg" class="radius-circle rotate-hover" height="50" alt=""/>管理中心</h1>
+        <h1><img src="r/images/logo.png" class="radius-circle rotate-hover" height="50" alt=""/>管理中心</h1>
     </div>
     <div class="head-l">
         <!--<a href="" id="first-page" class="button button-little bg-green" target="_blank">-->
-            <span class="icon-home"></span>首页</a> &nbsp;&nbsp;
+        <span class="icon-home"></span>首页</a> &nbsp;&nbsp;
         <a href="#" id="clear-cache" class="button button-little bg-blue">
             <span class="icon-wrench"></span>清除缓存</a> &nbsp;&nbsp;
         <a id="chngPwd" href="#" class="button button-little bg-blue" onclick="showChangePwd(this);">
