--- a/m/main.html
+++ b/m/main.html
@@ -23,7 +23,7 @@
 <body>
 
 <div id="main">
-    <img src="r/images/main-bg.jpg" id="bg">
+    <img src="r/images/main_bg.png" id="bg">
 </div>
 </body>
 </html>
